test: 3rd-part.jar replaced with app.jar,  fix build.xml